# healthy_habits_tracker

./: .env.sample  README.md  habit_fixture.json  pyproject.toml  user_fixture.json
config/: settings.py  urls.py
habits/: apps.py  models.py  paginators.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_62a6eec92d47b8ce_0001_initial_py.html  z_62a6eec92d47b8ce_0002_initial_py.html  z_62a6eec92d47b8ce_0003_alter_habit_user_py.html  z_62a6eec92d47b8ce_0004_alter_habit_execution_time_alter_habit_periodicity_py.html  z_62a6eec92d47b8ce___init___py.html  z_799887e2301a09ca___init___py.html  z_799887e2301a09ca_admin_py.html  z_799887e2301a09ca_apps_py.html  z_799887e2301a09ca_models_py.html  z_799887e2301a09ca_paginators_py.html  z_799887e2301a09ca_serializers_py.html  z_799887e2301a09ca_services_py.html  z_799887e2301a09ca_signals_py.html  z_799887e2301a09ca_tasks_py.html  z_799887e2301a09ca_tests_py.html  z_799887e2301a09ca_urls_py.html  z_799887e2301a09ca_validators_py.html  z_799887e2301a09ca_views_py.html  z_8d1b57b2816b8e67___init___py.html  z_9e236700040b43e5___init___py.html  z_9e236700040b43e5_add_test_data_py.html  z_9e236700040b43e5_csu_py.html  z_d7caba16f2a88201_0001_initial_py.html  z_d7caba16f2a88201___init___py.html  (+11 more)
(+14 files in other folders)
